--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: gautamkrishnar/blog-post-workflow@v1
         with:
           max_post_count: 5
-          feed_list: "https://medium.com/@gmferratti"
+          feed_list: "https://medium.com/feed/@gmferratti"
